--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,18 +10,26 @@
       "import": "./dist/index.js"
     }
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "lit": "^3.2.0",
-    "@zev/tokens": "*"
+    "@zev/tokens": "*",
+    "lit": "^3.2.0"
   },
   "devDependencies": {
+    "@vitest/coverage-v8": "^2.1.9",
+    "happy-dom": "^15.0.0",
+    "rimraf": "^6.0.0",
     "typescript": "^5.6.0",
-    "rimraf": "^6.0.0"
+    "vitest": "^2.0.0"
   }
 }
