--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
+    "test": "turbo run test",
     "clean": "turbo run clean",
     "storybook": "npm run dev --workspace=apps/storybook"
   },
